--- a/index.html
+++ b/index.html
@@ -8,6 +8,39 @@
 </head>
 
 <body>
+  <header class="header">
+    <nav class="navbar">
+      <a href="#logo" class="nav-logo">Tails</a>
+      <ul class="nav-menu">
+        <li class="nav-item">
+          <a href="#" class="nav-link">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Spaces</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Products</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Showrooms</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Company</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Media</a>
+        </li>
+        <li class="nav-item">
+          <a href="#" class="nav-link">Contact</a>
+        </li>
+      </ul>
+      <div class="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+    </nav>
+  </header>
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
