--- a/index.html
+++ b/index.html
@@ -123,6 +123,54 @@
     </div>
   </section>
 
+  <section class="products">
+    <div class="products__title">Services</div>
+    <div class="products-box">
+      <div class="products-box-grid">
+        <div class="grid-item-1">
+          <div class="grid-item-desc">
+            <div class="grid-item-desc__title">
+              Bedroom Tiles
+            </div>
+            <div class="grid-item-desc__desc">
+              Ante mus blandit sapien sociosqu per consequat ad.
+            </div>
+          </div>
+        </div>
+        <div class="grid-item-2">
+          <div class="grid-item-desc">
+            <div class="grid-item-desc__title">
+              Bathroom Tiles
+            </div>
+            <div class="grid-item-desc__desc">
+              Ante mus blandit sapien sociosqu per consequat ad.
+            </div>
+          </div>
+        </div>
+        <div class="grid-item-3">
+          <div class="grid-item-desc">
+            <div class="grid-item-desc__title">
+              Outdoor Tiles
+            </div>
+            <div class="grid-item-desc__desc">
+              Ante mus blandit sapien sociosqu per consequat ad.
+            </div>
+          </div>
+        </div>
+        <div class="grid-item-4">
+          <div class="grid-item-desc">
+            <div class="grid-item-desc__title">
+              Kitchen Tiles
+            </div>
+            <div class="grid-item-desc__desc">
+              Ante mus blandit sapien sociosqu per consequat ad.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
