--- a/index.html
+++ b/index.html
@@ -171,6 +171,63 @@
     </div>
   </section>
 
+  <section class="services">
+    <div class="services-title">
+      Services
+    </div>
+    <div class="services-flex">
+      <div class="services-flex-item">
+        <div class="left-item">
+          <img src="/src/assets/photos/service/plumbel.svg" alt="plumbel">
+        </div>
+        <div class="right-item">
+          <div class="right-item__title">
+            Measurement Service
+          </div>
+          <div class="right-item__desc">
+            Our sales support team will come & measure your property in order to ensure accuracy in design and help you
+            calculate how many tiles you need. Please call our toll free number 800 122 22 20 to arrange a visit, or
+            visit one of our Showrooms.
+          </div>
+          <button class="btn">Learn More</button>
+        </div>
+      </div>
+
+      <div class="services-flex-item">
+        <div class="right-item">
+          <div class="right-item__title">
+            Product Advice
+          </div>
+          <div class="right-item__desc">
+            Consult our professionals by calling our toll free number 800 122 22 20 or by visiting one of our showrooms
+            where our qualified sales team will offer you product advice highlighting the latest interior and exterior
+            trends.
+          </div>
+          <button class="btn">Learn More</button>
+        </div>
+        <div class="left-item">
+          <img src="/src/assets/photos/service/people.svg" alt="people">
+        </div>
+      </div>
+
+      <div class="services-flex-item">
+        <div class="left-item">
+          <img src="/src/assets/photos/service/design.svg" alt="design">
+        </div>
+        <div class="right-item">
+          <div class="right-item__title">
+            Interior Design
+          </div>
+          <div class="right-item__desc">
+            Benefit from our free interior design service. Our fully qualified interior designers will provide CAD
+            visuals to help you visualise your selected tiles before you buy.
+          </div>
+          <button class="btn">Learn More</button>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
