--- a/index.html
+++ b/index.html
@@ -228,6 +228,20 @@
     </div>
   </section>
 
+  <section class="about-us">
+    <div class="about-us__title">Why Choose Us?</div>
+    <div class="about-us-desc">
+      <div class="about-us-desc__text">Neque quisque sollicitudin tempor vestibulum elit taciti. Sagittis tempor
+        consequat turpis. Aenean curae elementum vestibulum dapibus vitae laoreet. Bibendum suspendisse himenaeos
+        malesuada. Nisl taciti si platea dui. Euismod malesuada facilisis duis lobortis aliquet massa. Tincidunt vivamus
+        ac consectetuer molestie pharetra. Sodales pulvinar non habitant.
+      </div>
+      <div class="about-us-desc__subtext">Nisl taciti si platea dui. Euismod malesuada facilisis duis lobortis aliquet
+        massa. Tincidunt vivamus ac consectetuer molestie pharetra. Sodales pulvinar non habitant.
+      </div>
+    </div>
+  </section>
+
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
