--- a/index.html
+++ b/index.html
@@ -65,61 +65,58 @@
     </section>
   </div>
 
-  <section class="collections">
-    <div class="collections__title">Featured Collection</div>
-    <!--Slider by Splide-->
+  <section class="collection">
+    <div class="collection__title">Featured Collection</div>
+    <!--Swiper-->
 
-    <div id="image-carousel" class="splide" aria-label="Beautiful Images">
-      <div class="splide__track">
-        <ul class="slides splide__list">
-          <li class="collections-item splide__slide">
+    <div class="collection-wrapper">
+      <div class="swiper mySwiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/boxes.svg" alt="boxes">
-            <div class="collections-item__title">Air Insulated Switchgear</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Air Insulated Switchgear</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-
-          <li class="collections-item splide__slide">
+            <div class="btn">View Collection</div>
+          </div>
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/switcher.svg" alt="switcher">
-            <div class="collections-item__title">Mira Switches</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Mira Switches</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-
-          <li class="collections-item splide__slide">
+            <div class="btn">View Collection</div>
+          </div>
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/transformator.svg" alt="transformator">
-            <div class="collections-item__title">Transformers & Package Substations</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Transformers & Package Substation</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-          <li class="collections-item splide__slide">
+            <div class="btn">View Collection</div>
+          </div>
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/boxes.svg" alt="boxes">
-            <div class="collections-item__title">Air Insulated Switchgear</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Air Insulated Switchgear</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-
-          <li class="collections-item splide__slide">
+            <div class="btn">View Collection</div>
+          </div>
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/switcher.svg" alt="switcher">
-            <div class="collections-item__title">Mira Switches</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Mira Switches</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-
-          <li class="collections-item splide__slide">
+            <div class="btn">View Collection</div>
+          </div>
+          <div class="swiper-slide">
             <img src="/src/assets/photos/colections/transformator.svg" alt="transformator">
-            <div class="collections-item__title">Transformers & Package Substations</div>
-            <div class="collections-item__desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
+            <div class="collection-item-title">Transformers & Package Substation</div>
+            <div class="collection-item-desc">Ante mus blandit sapien sociosqu per consequat ad. Aenean habitasse
               interdum letius lobortis primis tortor.</div>
-            <button class="collections-item__btn">View Collection</button>
-          </li>
-        </ul>
+            <div class="btn">View Collection</div>
+          </div>
+        </div>
       </div>
+    </div>
     </div>
   </section>
 
@@ -241,7 +238,6 @@
       </div>
     </div>
   </section>
-
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
