--- a/index.html
+++ b/index.html
@@ -226,18 +226,99 @@
   </section>
 
   <section class="about-us">
-    <div class="about-us__title">Why Choose Us?</div>
-    <div class="about-us-desc">
-      <div class="about-us-desc__text">Neque quisque sollicitudin tempor vestibulum elit taciti. Sagittis tempor
-        consequat turpis. Aenean curae elementum vestibulum dapibus vitae laoreet. Bibendum suspendisse himenaeos
-        malesuada. Nisl taciti si platea dui. Euismod malesuada facilisis duis lobortis aliquet massa. Tincidunt vivamus
-        ac consectetuer molestie pharetra. Sodales pulvinar non habitant.
+    <div class="about-us-left">
+      <img src="/src/assets/photos/about/Group 419.svg" alt="about">
+    </div>
+    <div class="about-us-right">
+      <div class="about-us-right__title">
+        Why Choose Us?
       </div>
-      <div class="about-us-desc__subtext">Nisl taciti si platea dui. Euismod malesuada facilisis duis lobortis aliquet
-        massa. Tincidunt vivamus ac consectetuer molestie pharetra. Sodales pulvinar non habitant.
+      <div class="about-us-right__desc">
+        Neque quisque sollicitudin tempor vestibulum elit taciti. Sagittis tempor consequat turpis. Aenean curae
+        elementum vestibulum dapibus vitae laoreet. Bibendum suspendisse himenaeos malesuada. Nisl taciti si platea
+        dui. Euismod malesuada facilisis duis lobortis aliquet massa. Tincidunt vivamus ac consectetuer molestie
+        pharetra. Sodales pulvinar non habitant.
       </div>
+
+      <ul class="about-us-rigth-list">
+        <li class="item">Sustainably sourced</li>
+        <li class="item">Easy to recycle</li>
+        <li class="item">Improved home resale value</li>
+        <li class="item">A smart way to leed certification</li>
+      </ul>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="flex-box">
+      <div class="flex-box-social">
+        <div class="logo">
+          Logo
+        </div>
+        <div class="media-title">
+          Social Media
+        </div>
+        <div class="media-flex">
+          <div class="media-flex-item">
+            <img src="/src/assets/icons/facebook.svg" alt="facebook">
+          </div>
+          <div class="media-flex-item">
+            <img src="/src/assets/icons/twitter.svg" alt="twitter">
+          </div>
+          <div class="media-flex-item">
+            <img src="/src/assets/icons/instagram.svg" alt="instagram">
+          </div>
+        </div>
+        <div class="copyright">
+          Copyright © 2021 | All Rights Reserved.
+        </div>
+      </div>
+      <div class="flex-box-products">
+        <div class="products-title">Products</div>
+        <ul class="products-list">
+          <li class="products-list-item">Sand Stone</li>
+          <li class="products-list-item">Cement</li>
+          <li class="products-list-item">Soft Stone</li>
+        </ul>
+      </div>
+      <div class="flex-box-products">
+        <div class="products-title">Services</div>
+        <ul class="products-list">
+          <li class="products-list-item">Measurement Service</li>
+          <li class="products-list-item">Product Advice</li>
+          <li class="products-list-item">Interior Design</li>
+        </ul>
+      </div>
+      <div class="flex-box-products">
+        <div class="products-title">Contact information</div>
+        <ul class="products-list">
+          <li class="products-list-item">3181 Al Imam Saud Ibn Abdul Aziz Branch Rd</li>
+          <li class="products-list-item">An Nuzhah, Riyadh 12474</li>
+          <li class="products-list-item">Saudi Arabia</li>
+        </ul>
+      </div>
+      <div class="flex-box-grid">
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-1.svg" alt="one">
+        </div>
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-2.svg" alt="two">
+        </div>
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-3.svg" alt="three">
+        </div>
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-4.svg" alt="four">
+        </div>
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-5.svg" alt="five">
+        </div>
+        <div class="grid-item">
+          <img src="/src/assets/photos/footer/item-6.svg" alt="six">
+        </div>
+      </div>
+    </div>
+  </footer>
   <script type="module" src="./src/js/main.js"></script>
 </body>
 
