changed photo formats and added project section

--- a/index.html
+++ b/index.html
@@ -249,6 +249,58 @@
     </div>
   </section>
 
+
+  <section class="projects">
+    <div class="projects-title">
+      Projects
+    </div>
+    <div class="projects-grid">
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (1).jpg" alt="build-1">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (2).jpg" alt="build-2">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (3).jpg" alt="build-3">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (4).jpg" alt="build-4">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (5).jpg" alt="build-5">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="project-grid-item">
+        <img src="/src/assets/photos/projects/build (6).jpg" alt="build-6">
+        <div class="project-desc">
+          <div class="project-name">Aenan habitasse</div>
+          <div class="project-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
   <footer class="footer">
     <div class="flex-box">
       <div class="flex-box-social">
