added animation in footer and grid sections

--- a/index.html
+++ b/index.html
@@ -122,49 +122,36 @@
 
   <section class="products">
     <div class="products__title">Services</div>
-    <div class="products-box">
-      <div class="products-box-grid">
-        <div class="grid-item-1">
-          <div class="grid-item-desc">
-            <div class="grid-item-desc__title">
-              Bedroom Tiles
-            </div>
-            <div class="grid-item-desc__desc">
-              Ante mus blandit sapien sociosqu per consequat ad.
-            </div>
-          </div>
-        </div>
-        <div class="grid-item-2">
-          <div class="grid-item-desc">
-            <div class="grid-item-desc__title">
-              Bathroom Tiles
-            </div>
-            <div class="grid-item-desc__desc">
-              Ante mus blandit sapien sociosqu per consequat ad.
-            </div>
-          </div>
-        </div>
-        <div class="grid-item-3">
-          <div class="grid-item-desc">
-            <div class="grid-item-desc__title">
-              Outdoor Tiles
-            </div>
-            <div class="grid-item-desc__desc">
-              Ante mus blandit sapien sociosqu per consequat ad.
-            </div>
-          </div>
-        </div>
-        <div class="grid-item-4">
-          <div class="grid-item-desc">
-            <div class="grid-item-desc__title">
-              Kitchen Tiles
-            </div>
-            <div class="grid-item-desc__desc">
-              Ante mus blandit sapien sociosqu per consequat ad.
-            </div>
-          </div>
+    <div class="products-grid">
+      <div class="products-grid-item" id="grid-1">
+        <img src="/src/assets/photos/products/bedroom.jpg" alt="bedroom">
+        <div class="products-desc">
+          <div class="products-name">Aenan habitasse</div>
+          <div class="products-location">Riyadh, Saudi Arabia</div>
         </div>
       </div>
+      <div class="products-grid-item" id="grid-2">
+        <img src="/src/assets/photos/products/bathroom.jpg" alt="bathroom">
+        <div class="products-desc">
+          <div class="products-name">Aenan habitasse</div>
+          <div class="products-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="products-grid-item" id="grid-3">
+        <img src="/src/assets/photos/products/outdoor.jpg" alt="outdoor">
+        <div class="products-desc">
+          <div class="products-name">Aenan habitasse</div>
+          <div class="products-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+      <div class="products-grid-item" id="grid-4">
+        <img src="/src/assets/photos/products/kitchen.jpg" alt="kitchen">
+        <div class="products-desc">
+          <div class="products-name">Aenan habitasse</div>
+          <div class="products-location">Riyadh, Saudi Arabia</div>
+        </div>
+      </div>
+    </div>
     </div>
   </section>
 
