changes in medias

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tail shop</title>
 </head>
 
@@ -116,8 +116,6 @@
           </div>
         </div>
       </div>
-    </div>
-    </div>
   </section>
 
   <section class="products">
@@ -312,21 +310,23 @@
           Copyright © 2021 | All Rights Reserved.
         </div>
       </div>
-      <div class="flex-box-products">
-        <div class="products-title">Products</div>
-        <ul class="products-list">
-          <li class="products-list-item">Sand Stone</li>
-          <li class="products-list-item">Cement</li>
-          <li class="products-list-item">Soft Stone</li>
-        </ul>
-      </div>
-      <div class="flex-box-products">
-        <div class="products-title">Services</div>
-        <ul class="products-list">
-          <li class="products-list-item">Measurement Service</li>
-          <li class="products-list-item">Product Advice</li>
-          <li class="products-list-item">Interior Design</li>
-        </ul>
+      <div class="flex-box-products-container">
+        <div class="flex-box-products">
+          <div class="products-title">Products</div>
+          <ul class="products-list">
+            <li class="products-list-item">Sand Stone</li>
+            <li class="products-list-item">Cement</li>
+            <li class="products-list-item">Soft Stone</li>
+          </ul>
+        </div>
+        <div class="flex-box-products">
+          <div class="products-title">Services</div>
+          <ul class="products-list">
+            <li class="products-list-item">Measurement</li>
+            <li class="products-list-item">Product Advice</li>
+            <li class="products-list-item">Interior Design</li>
+          </ul>
+        </div>
       </div>
       <div class="flex-box-products">
         <div class="products-title">Contact information</div>
