--- a/index.html
+++ b/index.html
@@ -8,39 +8,21 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper" id="home">
     <header class="header">
-      <nav class="navbar">
-        <a href="#logo" class="nav-logo">Tails</a>
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Spaces</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Products</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Showrooms</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Company</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Media</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-        </ul>
-        <div class="hamburger" alt="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-        </div>
-      </nav>
+      <a href="#home" class="logo">
+        Tail Shop
+      </a>
+      <input class="menu-btn" type="checkbox" id="menu-btn" />
+      <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+      <ul class="menu">
+        <li><a href="#products">Collection</a></li>
+        <li><a href="#showrooms">Showrooms</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
     </header>
 
     <section class="promo">
@@ -51,7 +33,8 @@
               New generation ceramic tile
             </div>
             <div class="promo-left-item__desc">
-              Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend aptent dapibus metus maecenas consequat.
+              Penatibus sem vitae mollis luctus mi tellus. Maximus eu eleifend aptent dapibus metus maecenas
+              consequat.
               Elementum interdum a semper. Netus nullam eros nisi volutpat nibh ex ultricies. Pharetra sagittis sit
               aliquet at. Magna nam platea justo.
             </div>
@@ -65,7 +48,7 @@
     </section>
   </div>
 
-  <section class="collection">
+  <section class="collection" id="products">
     <div class="collection__title">Featured Collection</div>
     <!--Swiper-->
     <div class="collection-wrapper">
@@ -117,7 +100,7 @@
       </div>
   </section>
 
-  <section class="products">
+  <section class="products" id="showrooms">
     <div class="products__title">Services</div>
     <div class="products-grid">
       <div class="products-grid-item" id="grid-1">
@@ -152,7 +135,7 @@
     </div>
   </section>
 
-  <section class="services">
+  <section class="services" id="services">
     <div class="services-title">
       Services
     </div>
@@ -209,7 +192,7 @@
     </div>
   </section>
 
-  <section class="about-us">
+  <section class="about-us" id="about">
     <div class="about-us-left">
       <img src="/src/assets/photos/about/Group 419.svg" alt="about">
     </div>
@@ -234,7 +217,7 @@
   </section>
 
 
-  <section class="projects">
+  <section class="projects" id="projects">
     <div class="projects-title">
       Projects
     </div>
@@ -285,7 +268,7 @@
   </section>
 
 
-  <footer class="footer">
+  <footer class="footer" id="contact">
     <div class="flex-box">
       <div class="flex-box-social">
         <div class="logo">
